--- a/app/src/main/res/layout/activity_veg_category.xml
+++ b/app/src/main/res/layout/activity_veg_category.xml
@@ -107,12 +107,12 @@
                                 <Button
                                     android:id="@+id/buttonPanel1"
                                     android:layout_width="120dp"
+                                    android:layout_height="50dp"
                                     android:layout_marginLeft="40dp"
                                     android:layout_marginTop="190dp"
-                                    android:layout_height="50dp"
                                     android:background="@drawable/cart_corner"
-                                    android:text="@string/cart"
-                                    />
+                                    android:onClick="cart"
+                                    android:text="@string/cart" />
 
                             </RelativeLayout>
                         </androidx.cardview.widget.CardView>
@@ -173,17 +173,16 @@
                                     android:textColor="@color/colorAccent"/>
 
 
-
                                 <Button
-                                    android:layout_width="120dp"
                                     android:id="@+id/buttonPanel2"
+                                    android:layout_width="120dp"
+                                    android:layout_height="50dp"
                                     android:layout_marginLeft="40dp"
                                     android:layout_marginTop="190dp"
-                                    android:layout_height="50dp"
                                     android:background="@drawable/cart_corner"
-                                    android:text="@string/cart"
+                                    android:onClick="cart"
 
-                                    />
+                                    android:text="@string/cart" />
 
                             </RelativeLayout>
                         </androidx.cardview.widget.CardView>
@@ -252,17 +251,16 @@
                                     android:textColor="@color/colorAccent"/>
 
 
-
                                 <Button
+                                    android:id="@+id/buttonPanel3"
                                     android:layout_width="120dp"
                                     android:layout_height="50dp"
-                                    android:id="@+id/buttonPanel3"
                                     android:layout_marginLeft="40dp"
                                     android:layout_marginTop="190dp"
                                     android:background="@drawable/cart_corner"
-                                    android:text="@string/cart"
+                                    android:onClick="cart"
 
-                                    />
+                                    android:text="@string/cart" />
 
                             </RelativeLayout>
                         </androidx.cardview.widget.CardView>
@@ -323,17 +321,16 @@
                                     android:textColor="@color/colorAccent"/>
 
 
-
                                 <Button
+                                    android:id="@+id/buttonPanel4"
                                     android:layout_width="120dp"
                                     android:layout_height="50dp"
-                                    android:id="@+id/buttonPanel4"
                                     android:layout_marginLeft="40dp"
                                     android:layout_marginTop="190dp"
                                     android:background="@drawable/cart_corner"
-                                    android:text="@string/cart"
+                                    android:onClick="cart"
 
-                                    />
+                                    android:text="@string/cart" />
 
                             </RelativeLayout>
                         </androidx.cardview.widget.CardView>
@@ -407,15 +404,15 @@
 
 
                                 <Button
+                                    android:id="@+id/buttonPanel5"
                                     android:layout_width="120dp"
                                     android:layout_height="50dp"
-                                    android:id="@+id/buttonPanel5"
                                     android:layout_marginLeft="40dp"
                                     android:layout_marginTop="190dp"
                                     android:background="@drawable/cart_corner"
-                                    android:text="@string/cart"
+                                    android:onClick="cart"
 
-                                    />
+                                    android:text="@string/cart" />
 
                             </RelativeLayout>
                         </androidx.cardview.widget.CardView>
@@ -477,14 +474,14 @@
 
 
                                 <Button
+                                    android:id="@+id/buttonPanel6"
                                     android:layout_width="120dp"
                                     android:layout_height="50dp"
-                                    android:id="@+id/buttonPanel6"
                                     android:layout_marginLeft="40dp"
                                     android:layout_marginTop="190dp"
                                     android:background="@drawable/cart_corner"
-                                    android:text="@string/cart"
-                                    />
+                                    android:onClick="cart"
+                                    android:text="@string/cart" />
 
                             </RelativeLayout>
                         </androidx.cardview.widget.CardView>
@@ -558,15 +555,15 @@
 
 
                                 <Button
+                                    android:id="@+id/buttonPanel7"
                                     android:layout_width="120dp"
                                     android:layout_height="50dp"
-                                    android:id="@+id/buttonPanel7"
                                     android:layout_marginLeft="40dp"
                                     android:layout_marginTop="190dp"
                                     android:background="@drawable/cart_corner"
-                                    android:text="@string/cart"
+                                    android:onClick="cart"
 
-                                    />
+                                    android:text="@string/cart" />
 
                             </RelativeLayout>
                         </androidx.cardview.widget.CardView>
@@ -628,14 +625,14 @@
 
 
                                 <Button
+                                    android:id="@+id/buttonPanel8"
                                     android:layout_width="120dp"
                                     android:layout_height="50dp"
-                                    android:id="@+id/buttonPanel8"
                                     android:layout_marginLeft="40dp"
                                     android:layout_marginTop="190dp"
                                     android:background="@drawable/cart_corner"
-                                    android:text="@string/cart"
-                                    />
+                                    android:onClick="cart"
+                                    android:text="@string/cart" />
 
                             </RelativeLayout>
                         </androidx.cardview.widget.CardView>
