--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimaryDark">#050505</color>
+    <color name="colorAccent">#E9E20A</color>
     <color  name ="colorLogin">#00ff7f</color>
     <color name="black">#000000</color>
     <color name="colortextview">#cdc9c9</color>
